<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactOneActivity">
    <LinearLayout
        android:id="@+id/linear_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/custum_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"/>

        <EditText
            android:id="@+id/custum_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_one"/>
        <EditText
            android:id="@+id/custum_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_two"/>
        <LinearLayout
            android:id="@+id/buttom_for_point_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/update_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttom_update"/>
            <Button
                android:id="@+id/delite_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttom_delete"/>
            <Button
                android:id="@+id/select_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/bottoms_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/add_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttom_add"/>
            <Button
                android:id="@+id/read_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttom_read"/>
            <Button
                android:id="@+id/clear_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttom_clear"/>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>